# effect-systems

./: README.md  cabal.project  flake.nix  free-monads.cabal
free-monads/: free-monads.cabal
free-monads/src/Control/Monad/: Free.hs
src/Control/Monad/: Free.hs
src/Control/Monad/Free/: Compose.hs  Scoped.hs
